--- a/style.css
+++ b/style.css
@@ -7,15 +7,18 @@ body {
     max-width: 1240px;
     display: flex;
     flex-flow: column nowrap;
-    background-color: rgb(229, 226, 227);
+    background-color: rgb(148, 148, 148);
+    
 }
 
 button {
-    background: #3882F6;
+    background:  #e9743d;
     color: #F9FAF8;
     font-weight: bold;
     padding: 8px 16px;
     border-radius: 8px;
+    
+    
 }
 
 ul {
@@ -29,7 +32,7 @@ ul {
 .card img {
     height: 150px;
     width: 150px;
-    border: 3px solid #3882F6;
+    border: 3px solid #3d3d3d;
     border-radius: 8px;
 }
 
@@ -37,7 +40,8 @@ ul {
 .hero {
     display: flex;
     flex-flow: column nowrap;
-    background-color: #1F2937;
+    background-color: #ffffff;
+    color:  #1F2937
     
     
 }
@@ -46,6 +50,7 @@ ul {
     display: flex;
     justify-content: space-between;
     align-items: center;  
+    
 }
 
 .header, .hero-contents, .img-panel-title, .img-panel-main, .quote, .quote-name, .modal {
@@ -57,7 +62,16 @@ ul {
     align-items: center;
     gap: 64px;
     flex-wrap: wrap;
+    margin: 0px 150px 50px;
    
+}
+
+.hero-img {
+    width: 400px;
+    height: 300px;
+    border: 5px solid #1F2937;
+    border-radius: 8px;
+
 }
 
 .hero-text {
@@ -68,24 +82,25 @@ ul {
 }
 
 .hero-text-title {
-    font-size: 48px;
+    font-size: 64px;
     font-weight: 800;
-    color: #F9FAF8;
+    
 }
 
 .hero-text-main, .header-links {
     font-size: 18px;
-    color: #E5E7EB;
+    
 }
 
 .hero-text-button {
     border: none;
     align-self: flex-start;
+    border: 2px solid #F9FAF8; 
 }
 
 .header-logo {
     font-size: 24px;
-    color: #F9FAF8;
+    
 }
 
 .hero-sample {
@@ -101,8 +116,9 @@ ul {
 
 .img-panel {
     flex: 1;
-    background-color: white;
+    background-color: #E5E7EB;
     text-align: center;
+    border-bottom: 1px solid grey;
 }
 
 .img-panel-title {
@@ -126,15 +142,15 @@ ul {
 
 .quote-panel {
     background-color: #E5E7EB;
-    flex: 1;
     padding: 36px;
 }
 
 .quote {
     color: #1F2937;
-    font-size: 36px;
+    font-size: 18px;
     font-style: italic;
-    margin-bottom: 0px;
+    
+    
 }
 
 .quote-name {
@@ -147,13 +163,13 @@ ul {
 .sign-up-panel {
     display: flex;
     flex-flow: column nowrap;
-    background-color: white;
+    background-color: #E5E7EB;
     padding: 36px;
 
 }
 
 .modal {
-    background-color: #3882F6;
+    background-color: #558ee9;
     color: #F9FAF8;
     border-radius: 15px;
     padding: 24px;
