Change color scheme

--- a/style.css
+++ b/style.css
@@ -7,13 +7,20 @@ body {
     max-width: 1240px;
     display: flex;
     flex-flow: column nowrap;
-    background-color: rgb(148, 148, 148);
+    background-color: #6E6E6E;
     
+}
+a, a:visited{
+    color: #ffffff; 
+    text-decoration: none;
+}
+a:hover {
+    text-decoration: underline;
 }
 
 button {
-    background:  #e9743d;
-    color: #F9FAF8;
+    background:  #323232;
+    color: #ffffff;
     font-weight: bold;
     padding: 8px 16px;
     border-radius: 8px;
@@ -26,13 +33,14 @@ ul {
     list-style: none;
     margin: 0;
     padding: 0;
-    gap: 24px
+    gap: 24px;
+
 }
 
 .card img {
     height: 150px;
     width: 150px;
-    border: 3px solid #3d3d3d;
+    border: 3px solid #323232;
     border-radius: 8px;
 }
 
@@ -40,36 +48,38 @@ ul {
 .hero {
     display: flex;
     flex-flow: column nowrap;
-    background-color: #ffffff;
-    color:  #1F2937
-    
+    background-color: #DDD0C8;
+    color:  #323232;
+    border-bottom: 1px solid #323232;
     
 }
 
 .header {
     display: flex;
     justify-content: space-between;
-    align-items: center;  
+    align-items: center;
+    background-color: #323232;
+    padding: 32px;
+    color:#ffffff;  
     
 }
 
-.header, .hero-contents, .img-panel-title, .img-panel-main, .quote, .quote-name, .modal {
+.hero-contents, .img-panel-title, .img-panel-main, .quote, .quote-name, .modal, .quote-panel-title, .quote-container {
    margin: 32px;
 }
 
 .hero-contents {
     display: flex;
-    align-items: center;
     gap: 64px;
     flex-wrap: wrap;
-    margin: 0px 150px 50px;
+    margin: 32px 150px 50px;
    
 }
 
 .hero-img {
     width: 400px;
     height: 300px;
-    border: 5px solid #1F2937;
+    border: 5px solid #323232;
     border-radius: 8px;
 
 }
@@ -95,7 +105,7 @@ ul {
 .hero-text-button {
     border: none;
     align-self: flex-start;
-    border: 2px solid #F9FAF8; 
+    border: 2px solid #323232; 
 }
 
 .header-logo {
@@ -116,15 +126,15 @@ ul {
 
 .img-panel {
     flex: 1;
-    background-color: #E5E7EB;
+    background-color: #DDD0C8;
     text-align: center;
-    border-bottom: 1px solid grey;
+    border-bottom: 1px solid #323232;
 }
 
 .img-panel-title {
     font-weight: 800;
     font-size: 36px;
-    color: #1F2937
+    color: #323232;
 }
 
 .img-panel-main {
@@ -141,36 +151,55 @@ ul {
 }
 
 .quote-panel {
-    background-color: #E5E7EB;
-    padding: 36px;
+    flex: 1;
+    background-color: #DDD0C8;
+    padding-bottom: 32px;
+    border-bottom: 1px solid #323232;
 }
 
-.quote {
-    color: #1F2937;
+.quote-panel-title {
+    font-weight: 800;
+    font-size: 36px;
+    color: #323232;
+    text-align: center;
+}
+
+
+.quote-container {
+    display: flex;
+    justify-content: space-evenly;
+    color: #323232;
     font-size: 18px;
     font-style: italic;
-    
-    
+
+}
+
+.quote-left, .quote-center, .quote-right {
+    display: flex;
+}
+
+.quote-list {
+    flex-direction: column;
+    font-size: 24px;
 }
 
 .quote-name {
     text-align: end;
     margin-top: 0px;
-    
 }
-
 
 .sign-up-panel {
     display: flex;
     flex-flow: column nowrap;
-    background-color: #E5E7EB;
+    background-color: #DDD0C8;
     padding: 36px;
 
 }
 
 .modal {
-    background-color: #558ee9;
-    color: #F9FAF8;
+    background-color: #DDD0C8;
+    border: 2px solid #323232;
+    color: #323232;
     border-radius: 15px;
     padding: 24px;
     display: flex;
@@ -187,7 +216,8 @@ ul {
 }
 
 .modal-button {
-    border: 2px solid #F9FAF8; 
+    border: 2px solid #323232;
+    background-color: #323232; 
 }
 
 .modal-header {
@@ -196,7 +226,7 @@ ul {
 }
 
 .modal-text {
-    color: #E5E7EB;
+    color: #323232;
 
 }
 
@@ -204,8 +234,8 @@ ul {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #1F2937;
-    color: #E5E7EB;
+    background-color: #323232;
+    color: #ffffff;
     padding: 36px;
 }
 
