--- a/style.css
+++ b/style.css
@@ -18,6 +18,13 @@ body {
     background-color: #6E6E6E;
 }
 
+h1 {
+    font-size: 4vw;
+    margin-top: 0;
+    margin-bottom: .33em;
+
+}
+
 img {
     max-width:100%;
 }
@@ -103,11 +110,6 @@ ul {
     flex: 1;
 }
 
-.hero-text-title {
-    font-size: 64px;
-    font-weight: 800;
-    
-}
 
 .hero-text-main, .header-links {
     font-size: 18px;
