--- a/style.css
+++ b/style.css
@@ -7,12 +7,12 @@ body {
 }
 
 .body-container {
-    font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
     margin-right: auto;
     margin-left: auto;
     min-height: 100vh;
-    max-width: 1240px;
+    max-width: 120vh;
     display: flex;
     flex-flow: column nowrap;
     background-color: #6E6E6E;
@@ -39,8 +39,17 @@ button {
     font-weight: bold;
     padding: 8px 16px;
     border-radius: 8px;
-    
-    
+        
+}
+
+button:hover {
+    cursor:pointer;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+button:active {
+    transform: translateY(3px);
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
 .header-links {
@@ -91,6 +100,7 @@ button {
 
 .copy-link-input:hover {
     background: #eeeeee;
+    
 }
 
 .copy-link-button {
@@ -106,10 +116,12 @@ button {
     border: 1px solid #323232;
     border-radius: 0px;
     cursor: pointer;
+    
 }
 
 .copy-link-button:hover {
     background: #cccccc;
+    box-shadow:none;
 }
 
 ul {
@@ -117,12 +129,12 @@ ul {
     list-style: none;
     margin: 0;
     padding: 0;
-    gap: 24px;
 
 }
 
 ul.quote-list {
     font-size:24px;
+    justify-content: space-between;
 }
 
 .card img {
@@ -154,15 +166,13 @@ ul.quote-list {
 
 .hero-contents {
     display: flex;
-    gap: 64px;
-    flex-wrap: wrap;
-    margin: 32px 150px 50px;
-   
+    justify-content: space-evenly;
+    flex-wrap: wrap;   
 }
 
 .hero-img {
-    width: 400px;
-    height: 300px;
+    max-width: 400px;
+    max-height: 300px;
     border: 5px solid #323232;
     border-radius: 8px;
 
@@ -171,8 +181,7 @@ ul.quote-list {
 .hero-text {
     display: flex;
     flex-flow: column nowrap;
-    row-gap: 1.5vw;
-    flex: 1;
+    justify-content: space-around;
 }
 
 
@@ -300,7 +309,7 @@ ul.quote-list {
     row-gap: 8px;
 }
 
-.modal-button {
+#modal-button {
     border: 2px solid #323232;
     background-color: #323232; 
 }
