--- a/style.css
+++ b/style.css
@@ -162,10 +162,17 @@ ul.quote-list {
 .card img {
     height: 150px;
     width: 150px;
-    border: 3px solid #323232;
-    border-radius: 8px;
+    box-shadow: 10px 10px gray; 
 }
 
+.card:hover {
+    cursor:pointer;
+    transform: scale(1.1);
+}
+
+.card:active {
+    transform: scale(0.9);
+}
 
 .hero {
     display: flex;
@@ -260,7 +267,7 @@ ul.quote-list {
 }
 
 .card-text {
-    margin: 12px;
+    margin: 12px 0px;
     font-size: 1.2vw;
 }
 
