Change index hero text alignment for mobile

--- a/style.css
+++ b/style.css
@@ -545,4 +545,8 @@ ul.quote-list {
     .hero-text-main {
         font-size: 16px;
     }
+
+    .hero-text {
+        text-align: center;
+    }
 }
