--- a/style.css
+++ b/style.css
@@ -2,8 +2,6 @@
     box-sizing: border-box;
   }
 
-
-
 body {
     margin: 0;
 }
@@ -97,47 +95,9 @@ button {
     text-underline-offset: 0.5rem;
 }
 
-.copy-link {
-    --height: 36px;
-    display: flex;
-    justify-content: center;
-}
-
-.copy-link-input {
-    
-    padding: 0 8px;
-    font-size: 14px;
-    border: 1px solid #323232;
-    border-right: none;
-    outline: none;
-    text-decoration: none;
-}
-
-.copy-link-input:hover {
-    background: #eeeeee;
-    
-}
-
-.copy-link-button {
-    flex-shrink: 0;
-    width: var(--height);
-    height: var(--height);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #dddddd;
-    color: #323232;
-    outline: none;
-    border: 1px solid #323232;
-    border-radius: 0px;
-    cursor: pointer;
-    
-}
-
-.copy-link-button:hover {
-    background: #cccccc;
-    box-shadow:none;
-    transform: none;
+.inline-material-icons {
+    vertical-align: bottom;
+    font-size: 18px !important;
 }
 
 ul {
@@ -213,7 +173,7 @@ ul.quote-list {
     color: #323232;
     text-align: center;
     border: 2px solid #323232;
-    font-size: 16px;
+    font-size: 18px;
     transition: all 0.5s ease-out;  
 }
 
@@ -287,7 +247,6 @@ ul.quote-list {
     text-align: center;
 }
 
-
 .quote-container {
     display: flex;
     justify-content: center;
@@ -301,9 +260,11 @@ ul.quote-list {
     display: flex;
     text-align: center;
 }
+
 .quote-center > .quote-list {
     font-size: 0px;
 }
+
 .quote-list {
     flex-direction: column;
     gap: 36px;
@@ -341,6 +302,7 @@ ul.quote-list {
 #modal-button {
     font-size: 18px;
     height: 3em;
+    min-width: 20%;
     align-self: center;
     cursor: pointer;
 }
@@ -361,6 +323,49 @@ ul.quote-list {
     color: #323232;
     font-size: 24px;
 
+}
+
+.copy-link {
+    --height: 36px;
+    display: flex;
+    justify-content: center;
+}
+
+.copy-link-input {
+    
+    padding: 0 8px;
+    font-size: 18px;
+    border: 1px solid #323232;
+    border-right: none;
+    outline: none;
+    text-decoration: none;
+}
+
+.copy-link-input:hover {
+    background: #eeeeee;
+    
+}
+
+.copy-link-button {
+    flex-shrink: 0;
+    width: var(--height);
+    height: var(--height);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #dddddd;
+    color: #323232;
+    outline: none;
+    border: 1px solid #323232;
+    border-radius: 0px;
+    cursor: pointer;
+    
+}
+
+.copy-link-button:hover {
+    background: #cccccc;
+    box-shadow:none;
+    transform: none;
 }
 
 .main-title {
@@ -523,9 +528,8 @@ ul.quote-list {
     background-color: #323232;
     color: #ffffff;
     padding: 2em;
+    font-size: 12px;
 }
-
-
 
 @media only screen and (max-width: 768px) {
     /* For mobile phones: */
@@ -538,13 +542,14 @@ ul.quote-list {
     }
 
     .header-links > .a-header {
-        border:none;
-        padding: 5vw;
+        border: none;
+        padding: 5vw 1vw;
+        font-size: 16px;
     }
 
     .header > .header-links {
-        gap:0;
-        margin:0;
+        gap: 0;
+        margin: 0;
         
     }
 
@@ -587,6 +592,7 @@ ul.quote-list {
     }
     .about-img {
         width: 50%;
+        height: 150px;
         
     }
 }
