Add tooltips, disable work header link

--- a/style.css
+++ b/style.css
@@ -60,6 +60,11 @@ button {
     transition: all 0.5s ease-out;  
 }
 
+.out-of-service {
+    opacity: 60%;
+    cursor: not-allowed;
+}
+
 .header-links {
     display: flex;
     gap: 0.5rem;
@@ -529,6 +534,33 @@ ul.quote-list {
     color: #ffffff;
     padding: 2em;
     font-size: 12px;
+}
+
+/* Tooltip container */
+.tooltip {
+    position: relative;
+    display: inline-block;
+    
+}
+  
+/* Tooltip text */
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
+    position: absolute;
+    z-index: 1;
+    top: 100%;
+    left: 50%;
+    margin-left: -60px;
+}
+  
+.tooltip:hover .tooltiptext {
+    visibility: visible;
 }
 
 @media only screen and (max-width: 768px) {
