--- a/style.css
+++ b/style.css
@@ -61,8 +61,8 @@ button {
 }
 
 .out-of-service * {
-    opacity: 0.6;
     cursor: not-allowed;
+    
 }
 
 .header-links {
@@ -221,7 +221,7 @@ ul.quote-list {
 
 .img-panel-main {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     gap: 24px;
     padding-bottom: 32px;
     flex-flow: row wrap;
@@ -547,20 +547,26 @@ ul.quote-list {
 .tooltip .tooltiptext {
     visibility: hidden;
     width: 120px;
-    background-color: black;
+    background-color: #323232;
     color: #fff;
     text-align: center;
     padding: 5px 0;
     border-radius: 6px;
     position: absolute;
     z-index: 1;
-    top: 100%;
+    bottom: 105%;
     left: 50%;
     margin-left: -60px;
 }
   
 .tooltip:hover .tooltiptext {
     visibility: visible;
+}
+
+.prevent-select {
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
 }
 
 
