--- a/style.css
+++ b/style.css
@@ -458,13 +458,22 @@ ul.quote-list {
     line-height: 1.6
 }
 
+.about-text-img {
+    margin-right: 16px;
+    margin-top: 6px;
+    margin-bottom: 8px;
+    max-width: 200px;
+    float: left;
+    border-radius: 10px;
+}
+
 .active {
     background-color: #717171;
 }
 
 .fade {
     animation-name: fade;
-    animation-duration: 1.5s;
+    animation-duration: 0.5s;
 }
   
 @keyframes fade {
