--- a/style.css
+++ b/style.css
@@ -464,12 +464,13 @@ ul.quote-list {
     font-size: 16px;
     line-height: 1.6;
     padding: 1vw;
-    max-width: 60%;
+    max-width: 95%;
     margin: 2vw;
     border: 3px solid #323232;
     flex: 1;  
     align-self: flex-start; 
     box-shadow: 6px 4px;
+    /* 0 4px 8px 0 rgb(0 0 0 / 50%), 0 6px 20px 0 rgb(0 0 0 / 50%);  maybe this instead */
 }
 
 .about-text-img {
@@ -647,6 +648,20 @@ ul.quote-list {
 
     .hero-text {
         text-align: center;
+    }
+
+    .about-main {
+        flex-flow: column nowrap;
+    }
+
+    .about-nav {
+        align-self: auto;
+        margin-top: 16px;
+    }
+
+    .textSlides {
+        border: none;
+        box-shadow: none;
     }
 
     .about-card {
