--- a/style.css
+++ b/style.css
@@ -390,7 +390,7 @@ ul.quote-list {
 .about-nav {
     position: relative;
     margin: 0;
-    padding: 2vw;
+    padding: 2vw 0vw;
     flex: 1;  
     align-self: flex-start; 
 }
@@ -466,11 +466,12 @@ ul.quote-list {
     padding: 1vw;
     max-width: 95%;
     margin: 2vw;
+    margin-left: 0;
     border: 3px solid #323232;
     flex: 1;  
     align-self: flex-start; 
-    box-shadow: 6px 4px;
-    /* 0 4px 8px 0 rgb(0 0 0 / 50%), 0 6px 20px 0 rgb(0 0 0 / 50%);  maybe this instead */
+    /* box-shadow: 6px 4px;*/
+    box-shadow: 8px 4px 8px 4px rgb(0 0 0 / 50%); 
 }
 
 .about-text-img {
@@ -657,6 +658,7 @@ ul.quote-list {
     .about-nav {
         align-self: auto;
         margin-top: 16px;
+        border-bottom: 1px solid #323232;
     }
 
     .textSlides {
@@ -665,7 +667,8 @@ ul.quote-list {
     }
 
     .about-card {
-        width: 80%
+        width: 80%;
+        padding-bottom: 18px;
     }
 
     .about-img {
